offscale.rust-actix-diesel-auth-scaffold.dbb8063d586a39fb6d5227ac8a7a4cac4b744941
Running as unit: run-p2462385-i15042491.scope; invocation ID: b0a1f34b36c840608e04d6e4e7662873
   Compiling proc-macro2 v1.0.95
   Compiling unicode-ident v1.0.18
   Compiling libc v0.2.174
    Checking cfg-if v1.0.1
   Compiling serde v1.0.219
    Checking pin-project-lite v0.2.16
   Compiling autocfg v1.5.0
    Checking smallvec v1.15.1
    Checking futures-core v0.3.31
    Checking value-bag v1.11.1
   Compiling parking_lot_core v0.9.11
    Checking scopeguard v1.2.0
   Compiling typenum v1.18.0
    Checking log v0.4.27
   Compiling lock_api v0.4.13
    Checking stable_deref_trait v1.2.0
    Checking memchr v2.7.5
   Compiling crossbeam-utils v0.8.21
   Compiling quote v1.0.40
    Checking bytes v1.10.1
    Checking itoa v1.0.15
   Compiling version_check v0.9.5
   Compiling syn v2.0.104
    Checking parking_lot v0.12.4
    Checking once_cell v1.21.3
    Checking bitflags v2.9.1
    Checking mio v1.0.4
    Checking signal-hook-registry v1.4.5
    Checking concurrent-queue v2.5.0
    Checking socket2 v0.6.0
    Checking parking v2.2.1
   Compiling getrandom v0.3.3
    Checking slab v0.4.10
    Checking futures-sink v0.3.31
    Checking tokio v1.47.0
    Checking writeable v0.6.1
    Checking litemap v0.8.0
   Compiling shlex v1.3.0
   Compiling jobserver v0.1.33
   Compiling generic-array v0.14.7
   Compiling icu_properties_data v2.0.1
   Compiling icu_normalizer_data v2.0.0
   Compiling cc v1.2.30
   Compiling pkg-config v0.3.32
    Checking event-listener v5.4.0
    Checking tracing-core v0.1.34
   Compiling num-traits v0.2.19
    Checking futures-io v0.3.31
    Checking ryu v1.0.20
    Checking percent-encoding v2.3.1
    Checking pin-utils v0.1.0
   Compiling zerocopy v0.8.26
    Checking fastrand v2.3.0
    Checking event-listener-strategy v0.5.4
    Checking rand_core v0.9.3
   Compiling strsim v0.11.1
   Compiling unicode-xid v0.2.6
   Compiling rustix v1.0.8
   Compiling serde_json v1.0.141
    Checking futures-task v0.3.31
   Compiling fnv v1.0.7
   Compiling ident_case v1.0.1
    Checking futures-util v0.3.31
    Checking futures-lite v2.6.0
   Compiling zstd-sys v2.0.15+zstd.1.5.7
   Compiling crc32fast v1.5.0
    Checking local-waker v0.1.4
    Checking equivalent v1.0.2
    Checking linux-raw-sys v0.9.4
    Checking alloc-no-stdlib v2.0.4
    Checking hashbrown v0.15.4
    Checking tokio-util v0.7.15
   Compiling zstd-safe v7.2.4
    Checking alloc-stdlib v0.2.2
   Compiling synstructure v0.13.2
   Compiling darling_core v0.21.3
    Checking http v0.2.12
    Checking ppv-lite86 v0.2.21
    Checking crypto-common v0.1.6
    Checking block-buffer v0.10.4
    Checking form_urlencoded v1.2.1
    Checking hybrid-array v0.3.1
    Checking aho-corasick v1.1.3
   Compiling serde_derive v1.0.219
   Compiling zerofrom-derive v0.1.6
   Compiling yoke-derive v0.8.0
   Compiling zerovec-derive v0.11.1
   Compiling displaydoc v0.2.5
   Compiling tracing-attributes v0.1.30
    Checking zerofrom v0.1.6
    Checking yoke v0.8.0
   Compiling darling_macro v0.21.3
    Checking zerotrie v0.2.2
    Checking powerfmt v0.2.0
    Checking utf8_iter v1.0.4
    Checking cpufeatures v0.2.17
    Checking adler2 v2.0.1
   Compiling winnow v0.7.12
    Checking async-task v4.7.1
    Checking zerovec v0.11.2
    Checking regex-syntax v0.8.5
    Checking tracing v0.1.41
    Checking atomic-waker v1.1.2
   Compiling heck v0.5.0
    Checking tinystr v0.8.1
    Checking icu_locale_core v2.0.0
    Checking potential_utf v0.1.2
    Checking icu_collections v2.0.0
    Checking icu_provider v2.0.0
    Checking icu_properties v2.0.1
    Checking icu_normalizer v2.0.0
   Compiling num-conv v0.1.0
   Compiling httparse v1.10.1
   Compiling time-core v0.1.4
   Compiling time-macros v0.2.22
    Checking idna_adapter v1.2.1
    Checking idna v1.0.3
   Compiling bytestring v1.4.0
   Compiling toml_parser v1.0.1
    Checking regex-automata v0.4.9
    Checking indexmap v2.10.0
    Checking piper v0.2.4
   Compiling toml_datetime v0.7.0
   Compiling serde_spanned v1.0.0
    Checking miniz_oxide v0.8.9
    Checking deranged v0.4.0
   Compiling darling v0.21.3
    Checking polling v3.9.0
   Compiling derive_more-impl v2.0.1
    Checking digest v0.10.7
    Checking rand_chacha v0.9.0
    Checking brotli-decompressor v5.0.0
    Checking actix-rt v2.10.0
    Checking actix-utils v3.0.1
    Checking async-channel v2.5.0
    Checking async-lock v3.4.0
   Compiling cookie v0.16.2
    Checking socket2 v0.5.10
    Checking actix-service v2.0.3
   Compiling pq-sys v0.7.2
   Compiling regex-lite v0.1.6
    Checking subtle v2.6.1
   Compiling diesel_derives v2.3.3
   Compiling either v1.15.0
   Compiling actix-router v0.5.3
   Compiling dsl_auto_type v0.2.0
    Checking time v0.3.41
    Checking brotli v8.0.1
    Checking derive_more v2.0.1
    Checking async-io v2.5.0
    Checking blocking v1.6.2
    Checking rand v0.9.2
    Checking flate2 v1.1.2
    Checking regex v1.11.1
    Checking sha1 v0.10.6
   Compiling toml v0.9.3
    Checking h2 v0.3.27
    Checking url v2.5.4
    Checking actix-codec v0.5.2
    Checking async-executor v1.13.2
    Checking crypto-common v0.2.0-rc.3
    Checking block-buffer v0.11.0-rc.4
   Compiling diesel_table_macro_syntax v0.3.0
    Checking local-channel v0.1.5
    Checking scheduled-thread-pool v0.2.7
    Checking encoding_rs v0.8.35
    Checking base64 v0.22.1
    Checking foldhash v0.1.5
    Checking mime v0.3.17
    Checking iana-time-zone v0.1.63
    Checking httpdate v1.0.3
    Checking language-tags v0.3.2
    Checking event-listener v2.5.3
    Checking async-channel v1.9.0
    Checking chrono v0.4.41
    Checking digest v0.11.0-rc.0
    Checking r2d2 v0.8.10
    Checking async-global-executor v2.4.1
   Compiling migrations_internals v2.3.0
   Compiling actix-web-codegen v4.3.0
    Checking actix-server v2.6.0
    Checking serde_urlencoded v0.7.1
    Checking zstd v0.13.3
   Compiling actix-macros v0.2.4
    Checking num-integer v0.1.46
    Checking actix-http v3.11.0
    Checking kv-log-macro v1.0.7
    Checking byteorder v1.5.0
    Checking base64ct v1.8.0
    Checking downcast-rs v2.0.2
    Checking impl-more v0.1.9
    Checking itertools v0.13.0
    Checking async-std v1.13.1
    Checking num-bigint v0.4.6
    Checking password-hash v0.6.0-rc.1
   Compiling migrations_macros v2.3.0
   Compiling utoipa-gen v5.4.0 (https://github.com/SamuelMarks/utoipa?branch=bigdecimal#84647b6e)
    Checking blake2 v0.11.0-rc.0
   Compiling async-trait v0.1.88
   Compiling derive_more-impl v1.0.0
    Checking combine v4.6.7
    Checking sha1_smol v1.0.1
    Checking arc-swap v1.7.1
    Checking actix-web v4.11.0
    Checking argon2 v0.6.0-rc.0
   Compiling strum_macros v0.27.2
    Checking derive_more v1.0.0
    Checking uuid v1.17.0
    Checking diesel v2.3.2
    Checking dotenvy v0.15.7
    Checking lazy_static v1.5.0
    Checking actix-web-httpauth v0.8.2
    Checking utoipa v5.4.0 (https://github.com/SamuelMarks/utoipa?branch=bigdecimal#84647b6e)
    Checking redis v0.27.6
error[E0271]: type mismatch resolving `<DB as TypeMetadata>::MetadataLookup == &mut <DB as TypeMetadata>::MetadataLookup`
   --> /home/adwin/.cargo/registry/src/mirrors.tuna.tsinghua.edu.cn-4dc01642fd091eda/diesel-2.3.2/src/query_builder/ast_pass.rs:228:51
    |
228 |             } => collector.push_bound_value(bind, metadata_lookup)?,
    |                                                   ^^^^^^^^^^^^^^^ types differ

For more information about this error, try `rustc --explain E0271`.
error: could not compile `diesel` (lib) due to 1 previous error
